<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <Button
        android:id="@+id/btn_AC"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_allclean_btn"
        android:text="@string/txt_ac"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/btn_plus_minus"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_operation_btns"
        android:text="@string/txt_pos_neg"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/btn_AC"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/btn_percentage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_operation_btns"
        android:text="@string/txt_MOD_btn"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/btn_plus_minus"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_operation_btns"
        android:text="@string/txt_symb_div"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/btn_percentage"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/btn_num_7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_number_btns"
        android:text="@string/num_7"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_AC" />

    <Button
        android:id="@+id/btn_num_8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_number_btns"
        android:text="@string/num_8"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/btn_num_7"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus_minus" />

    <Button
        android:id="@+id/btn_num_9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_number_btns"
        android:text="@string/num_9"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/btn_num_8"
        app:layout_constraintTop_toBottomOf="@+id/btn_percentage" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_operation_btns"
        android:text="@string/txt_symb_mul"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/btn_num_9"
        app:layout_constraintTop_toBottomOf="@+id/btn_div" />

    <Button
        android:id="@+id/btn_num_4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_number_btns"
        android:text="@string/num_4"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_num_7" />

    <Button
        android:id="@+id/btn_num_5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_number_btns"
        android:text="@string/num_5"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/btn_num_4"
        app:layout_constraintTop_toBottomOf="@+id/btn_num_8" />

    <Button
        android:id="@+id/btn_num_6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_number_btns"
        android:text="@string/num_6"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/btn_num_5"
        app:layout_constraintTop_toBottomOf="@+id/btn_num_9" />

    <Button
        android:id="@+id/btn_subs"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_operation_btns"
        android:text="@string/txt_symb_substraction"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/btn_num_6"
        app:layout_constraintTop_toBottomOf="@+id/btn_multiply" />

    <Button
        android:id="@+id/btn_num_1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_number_btns"
        android:text="@string/num_1"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_num_4" />

    <Button
        android:id="@+id/btn_num_2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_number_btns"
        android:text="@string/num_2"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/btn_num_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_num_5" />

    <Button
        android:id="@+id/btn_num_3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_number_btns"
        android:text="@string/num_3"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/btn_num_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_num_6" />

    <Button
        android:id="@+id/btn_addition"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_operation_btns"
        android:text="@string/txt_symb_addition"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/btn_num_3"
        app:layout_constraintTop_toBottomOf="@+id/btn_subs" />

    <Button
        android:id="@+id/btn_num_0"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/style_operation_btns"
        android:text="@string/num_0"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_num_1" />

    <Button
        android:id="@+id/btn_point"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/style_operation_btns"
        android:text="@string/txt_symb_point"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_num_0"
        app:layout_constraintTop_toBottomOf="@+id/btn_num_2" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/style_operation_btns"
        android:text="@string/txt_symb_clean"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_point"
        app:layout_constraintTop_toBottomOf="@+id/btn_num_3" />

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/style_operation_btns"
        android:text="@string/txt_symb_equals"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/btn_addition" />

    <EditText
        android:id="@+id/inputOperations"
        android:layout_width="409dp"
        android:layout_height="90dp"
        android:background="@drawable/style_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingHorizontal="20dp"
        android:textAlignment="textEnd"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSentence"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/inputSentence"
        android:layout_width="407dp"
        android:layout_height="125dp"
        android:background="@color/background_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingHorizontal="20dp"
        android:textAlignment="textEnd"
        android:textSize="100sp"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>